# PointCloud-Processing

./: .gitignore
pointpkg/: CMakeLists.txt  CMakeSettings.json  coppeliasim_interface_parameters.txt  model.onnx  package.xml  parameters.txt  pcl_interface_parameters - コピー (2).txt  pcl_interface_parameters - コピー.txt  pcl_interface_parameters.txt  ros_interface_parameters.txt  ros_interface_parameters_MSR.txt
pointpkg/include/: simConst.h  simLib.h  simTypes.h
pointpkg/launch/: Cobotta_Test.launch  Cobotta_Tool.launch  Cobotta_ToolTip.launch  MSRobot.launch  best.launch  main.launch
pointpkg/remoteApi/: extApiPlatform.c
pointpkg/src/: array3d_extention.h  contact_detector.h  coppeliasim_interface.cpp  coppeliasim_interface.h  development_commands.h  gui.cpp  gui.h  labview_interface.cpp  labview_interface.h  main.cpp  manager.cpp  manager.h  marker_position_compensater.cpp  marker_position_compensater.h  memo.txt  params.cpp  params.h  pcl.cpp  pcl.h  pcl2.cpp  pcl2.h  point_cloud_receiver.h  point_cloud_shower.h  practice.cpp  practice.h  realsense_interface (2).cpp  realsense_interface (2).h  realsense_interface.cpp  realsense_interface.h  ros_interface.cpp  ros_interface.h  ros_param.cpp  ros_param.h  schedule.txt  tdmaker_for_pc.cpp  yolo_detector.cpp  yolo_detector.h  yolo_utils.cpp  yolo_utils.h
pointpkg/src/cad/: a.out  cobotta_fulltool_XxYyZ.pcd  cobotta_tip__XxYyZ.pcd  obj_maker_cube.cpp  pcd_maker.cpp  result.pcd  sample_cube.pcd  tmp_mask.pcd  tmp_target.pcd  tmp_tip.pcd  tool_mask.pcd  tool_target.pcd  tool_tip.pcd
pointpkg/src/not_used/: client.cpp  client.h  config.h  main_ori.cpp  manager.cpp  manager.h  pointer.cpp  pointer.h
pointpkg/src/svm/: svm.cpp
